--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             Ik ben 37 jaar, getrouwd met Tom en mama van Lou en Sam. Samen wonen we in het landelijke Opitter (Noord-Limburg). <br>
             Na mijn basisopleiding tot pediatrisch verpleegkundige heb ik bijkomend de masteropleiding ‘Medisch sociale wetenschappen (Ziekenhuiswetenschappen)’ gestudeerd aan de Katholieke Universiteit Leuven.<br>
             Ondertussen ben ik reeds 14 jaar actief binnen het domein 'Kwaliteit en Patiëntveiligheid' van algemene ziekenhuizen.</p>
-            <img src="images/pasfoto.png" id="pasfoto" alt="pasfoto" title="pasfoto" height="300" width="240">
+            <img src="Images/pasfoto.png" id="pasfoto" alt="pasfoto" title="pasfoto" height="300" width="240">
         </div>
         <footer>
             <h4>Copyright 2025 | Deze website maakt gebruik van cookies </h4>
